Role and User Permissions

--- a/shopping_cart/shopping_cart/doctype/shopping_cart_settings/shopping_cart_settings.json
+++ b/shopping_cart/shopping_cart/doctype/shopping_cart_settings/shopping_cart_settings.json
@@ -19,7 +19,6 @@
   {
    "fieldname": "company", 
    "fieldtype": "Link", 
-   "ignore_restrictions": 0, 
    "in_list_view": 1, 
    "label": "Company", 
    "options": "Company", 
@@ -30,7 +29,7 @@
    "description": "<a href=\"#Sales Browser/Territory\">Add / Edit</a>", 
    "fieldname": "default_territory", 
    "fieldtype": "Link", 
-   "ignore_restrictions": 1, 
+   "ignore_user_permissions": 1, 
    "in_list_view": 1, 
    "label": "Default Territory", 
    "options": "Territory", 
@@ -46,7 +45,7 @@
    "description": "<a href=\"#Sales Browser/Customer Group\">Add / Edit</a>", 
    "fieldname": "default_customer_group", 
    "fieldtype": "Link", 
-   "ignore_restrictions": 1, 
+   "ignore_user_permissions": 1, 
    "label": "Default Customer Group", 
    "options": "Customer Group", 
    "permlevel": 0, 
@@ -97,7 +96,7 @@
  "icon": "icon-shopping-cart", 
  "idx": 1, 
  "issingle": 1, 
- "modified": "2014-05-07 02:59:37.942130", 
+ "modified": "2014-05-26 03:05:53.747800", 
  "modified_by": "Administrator", 
  "module": "Shopping Cart", 
  "name": "Shopping Cart Settings", 
